implemented getAll. Auth not tested
