# backend/api/openapi.yaml
@@ -85,3 +85,12 @@ components:
           type: string
         thread:
           type: array
+
+  securitySchemes:
+    bearerAuth:            # arbitrary name for the security scheme
+      type: http
+      scheme: bearer
+      bearerFormat: JWT    # optional, arbitrary value for documentation purposes
+
+security:
+  - bearerAuth: []         # use the same name as above
