# backend/src/app.js
@@ -7,7 +7,7 @@ const path = require('path');
 const OpenApiValidator = require('express-openapi-validator');
 
 const auth = require('./auth');
-const dummy = require('./dummy');
+const channels = require('./channels');
 
 const app = express();
 app.use(cors());
@@ -19,6 +19,8 @@ const apiSpec = path.join(__dirname, '../api/openapi.yaml');
 const apidoc = yaml.load(fs.readFileSync(apiSpec, 'utf8'));
 app.use('/v0/api-docs', swaggerUi.serve, swaggerUi.setup(apidoc));
 
+// app.post('/login', auth.login);
+
 app.use(
     OpenApiValidator.middleware({
       apiSpec: apiSpec,
@@ -27,8 +29,9 @@ app.use(
     }),
 );
 
-app.get('/v0/dummy', dummy.get);
 // Your routes go here
+// app.get('/v0/channels', auth.check, channels.getAll);
+app.get('/v0/channels', channels.getAll);
 
 app.use((err, req, res, next) => {
   res.status(err.status).json({
